--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
   <!-- <link rel="stylesheet" href="./css/styles.css" /> -->
 
   <!-- ✅ Optional Fallback for old browsers -->
-  <noscript>
+  <!-- <noscript>
     <link rel="stylesheet" href="./css/styles.legacy.css" />
-  </noscript>
+  </noscript> -->
 </head>
 
 <body>
@@ -92,7 +92,7 @@
   </footer>
 
   <!-- ✅ Scripts -->
-  <script src="./js/main.js" defer></script>
+  <!-- <script src="./js/main.js" defer></script> -->
 </body>
 
 </html>
