--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 
 
-<link rel="stylesheet" href="base/variables.css">
+<!-- <link rel="stylesheet" href="base/variables.css">
 <link rel="stylesheet" href="base/reset.css">
 <link rel="stylesheet" href="base/typography.css">
 <link rel="stylesheet" href="base/global.css">
@@ -18,7 +18,7 @@
 <link rel="stylesheet" href="layout/header.css">
 <link rel="stylesheet" href="layout/footer.css">
 <link rel="stylesheet" href="components/card.css">
-<link rel="stylesheet" href="config/responsive.css">
+<link rel="stylesheet" href="config/responsive.css"> -->
 
 
   <!-- ✅ Title & Favicon -->
@@ -29,7 +29,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap" rel="stylesheet" />
 
   <!-- ✅ Main CSS -->
-  <!-- <link rel="stylesheet" href="./css/styles.css" /> -->
+  <link rel="stylesheet" href="./css/styles.css" />
 
   <!-- ✅ Optional Fallback for old browsers -->
   <!-- <noscript>
